fixed button spacing issue POI detail

--- a/css/poi-detail.css
+++ b/css/poi-detail.css
@@ -124,8 +124,11 @@
   margin-top: 0.3rem;
 }
 
+.extra-detail > .button-box {
+}
+
 #full-details .button-box {
-  margin: 0;
+  margin: 1rem 0 0 0;
 }
 
 /************************* general details ************************/
